objects/smartlists__Smart_List_Action__mdt.object
<CustomObject>
    <fields>
        <fullName>smartlists__Action_Label__c</fullName>
        <inlineHelpText>Enter a text value or $Label­.CustomLabelName</inlineHelpText>
        <label>Action Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autolaunched Flow</fullName>
                    <default>true</default>
                    <label>Autolaunched Flow</label>
                </value>
                <value>
                    <fullName>Screen Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__Custom_Permission__c</fullName>
        <inlineHelpText>API name of the custom permission required for executing this action. If blank, all users can execute this action</inlineHelpText>
        <label>Custom Permission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Display_Position__c</fullName>
        <label>Display Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smartlists__Flow_Name__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__List_Action_Availibility__c</fullName>
        <inlineHelpText>Define when the list buttons are enabled.
- When Records are Selected in the List: the action button is only enabled when users select records in the list. The selected records are passed to the flow
- When Records are Loaded: the action button is only enabled when records have been loaded in the list. The loaded records are passed to the flow
- Always: the action button is enabled all the time. The loaded records are passed to the flow</inlineHelpText>
        <label>List Action Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                    <default>true</default>
                    <label>When Records are Selected</label>
                </value>
                <value>
                    <fullName>Loaded</fullName>
                    <label>When Records are Loaded</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__Refresh_After_Execution__c</fullName>
        <label>Refresh After Execution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Row</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smartlists__Screenflow_Modal_Height__c</fullName>
        <inlineHelpText>Height in pixel of the Screenflow modal</inlineHelpText>
        <label>Screenflow: Modal Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smartlists__Screenflow_Show_Label_in_Modal_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the label of the action is displayed in the modal header. Make sure to uncheck &apos;Show Header&apos; in the screens of the flow otherwise, the label is displayed twice.</description>
        <label>Screenflow: Show Label in Modal Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smartlists__Smart_List_Definition__c</fullName>
        <label>Smart List Definition</label>
        <referenceTo>smartlists__Smart_List_Definition__mdt</referenceTo>
        <relationshipLabel>Smart List Actions</relationshipLabel>
        <relationshipName>Smart_List_Actions</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>smartlists__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>List Action</fullName>
                    <default>true</default>
                    <label>List Action</label>
                </value>
                <value>
                    <fullName>Row Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Smart List Action</label>
    <pluralLabel>Smart List Actions</pluralLabel>
    <validationRules>
        <fullName>smartlists__Check_List_Availability</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(smartlists__List_Action_Availibility__c) ) &amp;&amp;  ISPICKVAL( smartlists__Type__c , &apos;List Action&apos;)</errorConditionFormula>
        <errorDisplayField>smartlists__List_Action_Availibility__c</errorDisplayField>
        <errorMessage>List Action Availability is required for List Actions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>smartlists__Check_Refresh_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(smartlists__Type__c, &apos;List Action&apos;) &amp;&amp; ISPICKVAL(smartlists__Refresh_After_Execution__c, &apos;Row&apos;)</errorConditionFormula>
        <errorDisplayField>smartlists__Refresh_After_Execution__c</errorDisplayField>
        <errorMessage>Refresh type can only be List for List Actions</errorMessage>
    </validationRules>
</CustomObject>